third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/round-trip/test_struct_borrow_field_api.decompiled
//**** Cross-compiled for `move` syntax from `tests/no-v1-comparison/structs_visibility/test_struct_borrow_field_api.move`

//# publish
module 0x42::m1 {
    struct T<T0: drop + store> has copy, drop, store {
        h: T0,
    }
    struct S<T0: drop + store> has drop {
        f: u64,
        g: T<T0>,
    }
    #[pack]
    public fun pack_0x42_m1_T<T0: drop + store>(p0: T0): T<T0> {
        T<T0>{h: p0}
    }
    #[unpack]
    public fun unpack_0x42_m1_T<T0: drop + store>(p0: T<T0>): T0 {
        let T<T0>{h: _v0} = p0;
        _v0
    }
    #[borrow]
    public fun borrow_0x42_m1_T_h_0<T0: drop + store>(p0: &T<T0>): &T0 {
        &p0.h
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_m1_T_h_0<T0: drop + store>(p0: &mut T<T0>): &mut T0 {
        &mut p0.h
    }
    #[pack]
    public fun pack_0x42_m1_S<T0: drop + store>(p0: u64, p1: T<T0>): S<T0> {
        S<T0>{f: p0, g: p1}
    }
    #[unpack]
    public fun unpack_0x42_m1_S<T0: drop + store>(p0: S<T0>): (u64, T<T0>) {
        let S<T0>{f: _v0, g: _v1} = p0;
        (_v0, _v1)
    }
    #[borrow]
    public fun borrow_0x42_m1_S_f_0<T0: drop + store>(p0: &S<T0>): &u64 {
        &p0.f
    }
    #[borrow]
    public fun borrow_0x42_m1_S_g_1<T0: drop + store>(p0: &S<T0>): &T<T0> {
        &p0.g
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_m1_S_f_0<T0: drop + store>(p0: &mut S<T0>): &mut u64 {
        &mut p0.f
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_m1_S_g_1<T0: drop + store>(p0: &mut S<T0>): &mut T<T0> {
        &mut p0.g
    }
}


//# publish
module 0x42::m2 {
    use 0x42::m1;
    public fun try_immut_and_mut_diff_fields() {
        let _v0 = m1::pack_0x42_m1_T<u64>(30);
        let _v1 = m1::pack_0x42_m1_S<u64>(40, _v0);
        assert!(*m1::borrow_0x42_m1_S_f_0<u64>(&_v1) == 40, 9);
        let _v2 = m1::borrow_mut_0x42_m1_T_h_0<u64>(m1::borrow_mut_0x42_m1_S_g_1<u64>(&mut _v1));
        *_v2 = *_v2 + 1;
        assert!(*_v2 == 31, 10);
    }
    public fun try_immut_borrow_fields() {
        let _v0 = m1::pack_0x42_m1_T<u64>(100);
        let _v1 = m1::pack_0x42_m1_S<u64>(200, _v0);
        let _v2 = m1::borrow_0x42_m1_S_f_0<u64>(&_v1);
        let _v3 = m1::borrow_0x42_m1_T_h_0<u64>(m1::borrow_0x42_m1_S_g_1<u64>(&_v1));
        assert!(*_v2 == 200, 3);
        assert!(*_v3 == 100, 4);
    }
    public fun try_immut_from_mut() {
        let _v0 = m1::pack_0x42_m1_T<u64>(5);
        let _v1 = m1::pack_0x42_m1_S<u64>(6, _v0);
        assert!(*m1::borrow_0x42_m1_S_f_0<u64>(freeze(&mut _v1)) == 6, 5);
    }
    public fun try_mut_borrow_seq() {
        let _v0 = m1::pack_0x42_m1_T<u64>(1);
        let _v1 = m1::pack_0x42_m1_S<u64>(2, _v0);
        let _v2 = m1::borrow_mut_0x42_m1_S_f_0<u64>(&mut _v1);
        *_v2 = *_v2 + 10;
        _v2 = m1::borrow_mut_0x42_m1_T_h_0<u64>(m1::borrow_mut_0x42_m1_S_g_1<u64>(&mut _v1));
        *_v2 = *_v2 + 20;
        assert!(*m1::borrow_0x42_m1_S_f_0<u64>(&_v1) == 12, 7);
        assert!(*m1::borrow_0x42_m1_T_h_0<u64>(m1::borrow_0x42_m1_S_g_1<u64>(&_v1)) == 21, 8);
    }
    public fun try_reborrow_same_field_seq() {
        let _v0 = m1::pack_0x42_m1_T<u64>(9);
        let _v1 = m1::pack_0x42_m1_S<u64>(8, _v0);
        let _v2 = m1::borrow_mut_0x42_m1_S_f_0<u64>(&mut _v1);
        *_v2 = 88;
        _v2 = m1::borrow_mut_0x42_m1_S_f_0<u64>(&mut _v1);
        *_v2 = *_v2 + 1;
        assert!(*m1::borrow_0x42_m1_S_f_0<u64>(&_v1) == 89, 11);
    }
    public fun try_unpack_mut_ref() {
        let _v0 = m1::pack_0x42_m1_T<u64>(9);
        let _v1 = m1::pack_0x42_m1_S<u64>(8, _v0);
        let _v2 = &mut _v1;
        let _v3 = m1::borrow_mut_0x42_m1_S_f_0<u64>(_v2);
        let _v4 = m1::borrow_mut_0x42_m1_S_g_1<u64>(_v2);
        let _v5 = _v3;
        *_v5 = 88;
        let _v6 = m1::borrow_mut_0x42_m1_T_h_0<u64>(_v4);
        *_v6 = 99;
        assert!(*m1::borrow_0x42_m1_S_f_0<u64>(&_v1) == 88, 11);
        assert!(*m1::borrow_0x42_m1_T_h_0<u64>(m1::borrow_0x42_m1_S_g_1<u64>(&_v1)) == 99, 12);
        _v4 = m1::borrow_mut_0x42_m1_S_g_1<u64>(&mut _v1);
        let _v7 = m1::borrow_mut_0x42_m1_T_h_0<u64>(_v4);
        *_v7 = 100;
        assert!(*m1::borrow_0x42_m1_T_h_0<u64>(freeze(_v4)) == 100, 14);
        _v5 = m1::borrow_mut_0x42_m1_T_h_0<u64>(m1::borrow_mut_0x42_m1_S_g_1<u64>(&mut _v1));
        *_v5 = 101;
        assert!(*m1::borrow_0x42_m1_T_h_0<u64>(m1::borrow_0x42_m1_S_g_1<u64>(&_v1)) == 101, 15);
        _v2 = &mut _v1;
        let _v8 = m1::borrow_mut_0x42_m1_S_f_0<u64>(_v2);
        let _v9 = m1::borrow_mut_0x42_m1_S_g_1<u64>(_v2);
        *_v8 = 101;
        assert!(*m1::borrow_0x42_m1_S_f_0<u64>(&_v1) == 101, 15);
    }
    public fun try_unpack_ref() {
        let _v0 = m1::pack_0x42_m1_T<u64>(9);
        let _v1 = m1::pack_0x42_m1_S<u64>(8, _v0);
        let _v2 = &_v1;
        let _v3 = m1::borrow_0x42_m1_S_f_0<u64>(_v2);
        let _v4 = m1::borrow_0x42_m1_S_g_1<u64>(_v2);
        assert!(*_v3 == 8, 11);
        assert!(*m1::borrow_0x42_m1_T_h_0<u64>(_v4) == 9, 12);
        assert!(*m1::borrow_0x42_m1_T_h_0<u64>(m1::borrow_0x42_m1_S_g_1<u64>(&_v1)) == 9, 14);
        assert!(*m1::borrow_0x42_m1_T_h_0<u64>(m1::borrow_0x42_m1_S_g_1<u64>(&_v1)) == 9, 15);
        _v2 = &_v1;
        let _v5 = m1::borrow_0x42_m1_S_f_0<u64>(_v2);
        let _v6 = m1::borrow_0x42_m1_S_g_1<u64>(_v2);
        assert!(*_v5 == 8, 15);
    }
}


//# run 0x42::m2::try_immut_borrow_fields

//# run 0x42::m2::try_immut_from_mut

//# run 0x42::m2::try_mut_borrow_seq

//# run 0x42::m2::try_immut_and_mut_diff_fields

//# run 0x42::m2::try_reborrow_same_field_seq

//# run 0x42::m2::try_unpack_mut_ref